--- a/AppSQlite/AppSQlite.Android/Properties/AndroidManifest.xml
+++ b/AppSQlite/AppSQlite.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname">
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
-    <application android:label="AppSQlite.Android"></application>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="c.c" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="20" android:targetSdkVersion="27" />
+	<application android:label="AppSQlite.Android"></application>
 </manifest>
